# buddy-mlir

./: README.md  pyproject.toml  setup.py
scripts/: package.sh
tools/buddy_tools/: cli.py
