[tool.black]
line-length = 80

[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "build>=1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "buddy"
version = "0.0.1"
description = "An MLIR-based compiler framework bridges DSLs (domain-specific languages) to DSAs (domain-specific architectures)."
requires-python = ">=3.10"
dynamic = ["entry-points", "scripts"]
dependencies = [
  "numpy>=1.19.5, <=2.1.2",
  "PyYAML>=5.4.0, <=6.0.1",
  "ml_dtypes>=0.1.0, <=0.6.0; python_version < '3.13'",
  "ml_dtypes>=0.5.0, <=0.6.0; python_version >= '3.13'",
]

[tool.setuptools]
include-package-data = true
